add endpoints for recover
