# docs/swagger.json
@@ -9,11 +9,6 @@
     "paths": {
         "/trips": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "list all trips",
                 "consumes": [
                     "application/json"
@@ -38,11 +33,6 @@
                 }
             },
             "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "create new trip",
                 "consumes": [
                     "application/json"
@@ -56,13 +46,77 @@
                 "summary": "create new trip",
                 "parameters": [
                     {
-                        "description": "trip request",
-                        "name": "\"body\"",
+                        "description": "trip id is required",
+                        "name": "\"trip\"",
                         "in": "body",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/dto.Trip"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Trip"
+                        }
+                    }
+                }
+            }
+        },
+        "/trips/{tripId}/recover/backward": {
+            "put": {
+                "description": "recover backward",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "trips"
+                ],
+                "summary": "recover backward",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "trip id",
+                        "name": "\"tripId\"",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Trip"
+                        }
+                    }
+                }
+            }
+        },
+        "/trips/{tripId}/recover/forward": {
+            "put": {
+                "description": "recover forward",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "trips"
+                ],
+                "summary": "recover forward",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "trip id",
+                        "name": "\"tripId\"",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -83,17 +137,26 @@
                 "carId",
                 "flightId",
                 "hotelId",
-                "status",
+                "id",
                 "userId"
             ],
             "properties": {
+                "carBookingId": {
+                    "type": "integer"
+                },
                 "carId": {
                     "type": "integer"
                 },
                 "createdAt": {
                     "type": "string"
                 },
+                "flightBookingId": {
+                    "type": "integer"
+                },
                 "flightId": {
+                    "type": "integer"
+                },
+                "hotelBookingId": {
                     "type": "integer"
                 },
                 "hotelId": {
